crates/compiler/src/tests/e2e/good/0582_user_go_error_result_enum/main.gom
struct GoError {
    value: int32,
}

fn fail() -> Result[int32, GoError] {
    Result::Err(GoError { value: 7i32 })
}

fn main() -> unit {
    match fail() {
        Result::Ok(value) => println(value),
        Result::Err(err) => println(err.value),
    }
}
