crates/compiler/src/tests/e2e/bad/0576_go_error_user_shadow_extern/main.gom
struct GoError {
    value: int32,
}

#[go_error]
extern "go" "os" "Chdir" chdir(path: string) -> Result[unit, GoError]

fn main() -> unit {
    match chdir(".") {
        Result::Ok(_) => (),
        Result::Err(err) => println(err.value),
    }
}
